--- a/index.html
+++ b/index.html
@@ -9,7 +9,43 @@
     <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Ivy_Park_logo.svg/1200px-Ivy_Park_logo.svg.png">
 </head>
 <body>
-
+    <div class="fundo">
+        <h1>Tay e Grazi</h1>
+        <div class="calculadora">
+            <h1>Calculadora</h1>
+            <p id="resultado">resultado</p>
+            <table>
+                <tr>
+                    <td><button class ="botao">C</button></td>
+                    <td><button class ="botao"><</button></td>
+                    <td><button class ="botao">/</button></td>
+                    <td><button class ="botao">X</button></td>
+                </tr>
+                <tr>
+                    <td><button class ="botao">7</button></td>
+                    <td><button class ="botao">8</button></td>
+                    <td><button class ="botao">9</button></td>
+                    <td><button class ="botao">.</button></td>
+                </tr>
+                <tr>
+                    <td><button class ="botao">4</button></td>
+                    <td><button class ="botao">5</button></td>
+                    <td><button class ="botao">6</button></td>
+                    <td><button class ="botao">+</button></td>
+                </tr>
+                <tr>
+                    <td><button class ="botao">1</button></td>
+                    <td><button class ="botao">2</button></td>
+                    <td><button class ="botao">3</button></td>
+                    <td rowspan="2"><button class ="botao" style= "height: 106px;">=</button></td>
+                </tr>
+                <tr>
+                    <td colspan="2"><button class ="botao" style="width: 106px;">0</button></td>
+                    <td><button class ="botao">.</button></td>
+                </tr>
+            </table>
+        </div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
